--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,12 +21,13 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Setup Node.js environment
-      - uses: actions/setup-node@v2-beta
+        uses: actions/setup-node@v2-beta
         with:
           version: 12
+           
         
       - name: GitHub Action for Yarn
-      - uses: Borales/actions-yarn@v2.3.0
+        uses: Borales/actions-yarn@v2.3.0
         with:
           #yarn command
           cmd: install #npm install
